# rust-ocr-automation

./: .gitignore  Cargo.toml  README.md  requirements.txt  system_documentation.md
python_ocr/: ocr_engine.py  requirements.txt
src/: automation.rs  expression_detector.rs  expression_evaluator.rs  main.rs  result_manager.rs  screen_capture.rs
test_images_files/: calculation.txt  calculator.txt
