[package]
name = "screen_math_automation"
version = "0.1.0"
edition = "2021"
description = "Screen-Aware Math Automation System - Detects math expressions from screen via OCR and solves them"

[dependencies]
enigo = "0.2.1"
screenshots = "0.8"
image = "0.25"
regex = "1"
arboard = "3.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
